fix: adjust spacing of product name and product metadata

--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,12 @@ header {
 
 /* Product name */
 .product-name {
+  margin: 1.5rem 1rem;
   margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-  margin-left: 1rem;
   font-family: 'Lora', serif;
+  font-weight: 400;
   font-size: 0.875rem;
-  line-height: 1.2;
+  line-height: 1.0625rem;
 }
 
 
@@ -39,8 +39,8 @@ header {
   justify-content: space-between;
   align-items: center;
   margin-top: 1.5rem;
-  padding-right: 1rem;
-  padding-left: 1rem;
+  margin-right: 1rem;
+  margin-left: 1rem;
   font-family: 'Raleway', sans-serif;
 }
 
@@ -50,19 +50,30 @@ header {
   font-weight: 400;
 }
 
-.product-id,
-.product-colour-current {
+.product-id {
+  margin: 0;
   font-size: 0.75rem;
   color: #171717;
 }
 
-.product-colour {
-  padding-left: 1rem;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 400;
-}
 
 /* Colour picker */
+
+.product-colour {
+  margin-top: 1rem;
+  margin-right: 1rem;
+  margin-left: 1rem;
+}
+
+.product-colour-current {
+  margin-top: 0;
+  margin-bottom: 1rem;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 0.875rem;
+  color: #171717;
+}
 
 .product-colour-picker-black,
 .product-colour-picker-honey {
